# shapescape-dialogue-2

./: .gitignore  README.md  generate_doctree.py  mypy.ini  setup.cfg  setup.py
docs/: README.md  installation.md  syntax.md  usage_as_module.md  usage_with_regolith_filter.md  writing_the_documentation.md
src/shapescape_dialogue_2/: __init__.py  compiler.py  generator.py  main.py  message_duration.py  parser.py
tests/: README.md  a.bpa.json  a.bpe.json  ac.bpac.json  ast_example.txt  frozen_planet_cutscene.txt  frozen_planet_cutscene_2.txt  frozen_planet_cutscene_3.txt  log.txt  log_ast.txt  log_compiled.txt  log_generated.txt  log_tokens.txt  my_awesome_dialogue.txt  test.txt  zmd_dialogue.txt
