[metadata]
name = shapescape-dialogue-2
author = Shapescape
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires =
    mutagen
    numpy

[options.entry_points]
    console_scripts =
        shapescape-dialogue-2 = shapescape_dialogue_2.main:main_commandline

[options.packages.find]
    where = src
